1.99.8.20060828

1.99.9 (0000-00-00)
Modules:
- Statistical quantities: Initial sensitivity of Save was fixed, preventing
  attempts to save nonexistent statistics that led to crashes.
- SPML import: Miscellaneous small fixes and improvements.
- Shade: Mixing GUI was improved.


1.99.8 (2006-08-10)
Application:
- Crash on app exit when Document history is open was fixed.
- Recent files menu items have thumbnails.
- Data browser: Miscellaneous bugs were fixed.
- Data browser: Channel and graph titles are editable.
- Color axis does not display ticks/values when they are not applicable.
- Metadata more or less work again (although most modules have their creation
  still disabled).
- Translations updated: Czech.  New translations started: German.

Libraries:
- libgwyddion: Version information is now available.
- libgwyapp: Data browser can be used without window creation and its window
  can be controlled.
- libgwyapp: Long broken window-list option menu was superseded by
  GwyDataChooser and removed.
- libgwyapp: Settings file manipulation function report problems via GError.
- libgwyapp: gwy_app_init_common() for simplier initialization of Gwyddion
  applications.
- libgwyapp: Miscellaneous deprecated functions were removed, some were
  replaced with similar data-browser based functions.
- libgwyapp: 3D view was integrated to data-browser, it can display any
  channel and crashes were fixed.
- libgwyapp: Enum types are registered to the GObject type system.
- libgwymodule: Crash when a module did not register any function was fixed.
- libgwyprocess: Functions to check data field and line compatibility.
- libgwyprocess: Laplace interpolation speed was improved.
- libgwyprocess: Grain numbering speed was improved.
- libgwyprocess: Non-FFT correlation speed was improved.
- libgwyprocess: Watershed and correlation iterative interfaces were improved.
- libgwydgets: Gwy3DSetup is a new object which holds 3D scene settings, 3D
  widgets were updated to use it.