@@ -1,6 +1,10 @@
 1.99.8.20060828
 
 1.99.9 (0000-00-00)
+Libraries:
+- libgwydgets: Always insensitive 3D window light position controls were
+  fixed.
+
 Modules:
 - Statistical quantities: Initial sensitivity of Save was fixed, preventing
   attempts to save nonexistent statistics that led to crashes.
